Criando Entity, CrudRepository e adaptando o código

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@
       name: mercado-livro
     jpa:
       hibernate:
-        ddl-auto: update
+#        ddl-auto: update
         show-sql: true
     datasource:
       url: jdbc:mysql://localhost:3306/mlivro_db
